# adventofcode2024

./: .gitignore  decrypt.sh  encrypt.sh  ideas.al  parse_all.sh  readme.md  run_all.sh
day01/al/: main.al
day02/al/: main.al
day02/gleam/: gleam.toml
day02/gleam/src/: day02.gleam
day03/al/: main.al
day04/al/: main.al
day05/al/: main.al
day06/al/: main.al
day06/rust/: Cargo.toml
day06/rust/src/: main.rs
day07/al/: main.al
day08/al/: main.al
day08/rust/: Cargo.toml
day08/rust/src/: main.rs
day09/rust/: Cargo.toml
day09/rust/src/: main.rs
day10/rust/src/: main.rs
day11/rust/: Cargo.toml
day12/rust/: Cargo.toml
day13/js/: main.js
day13/rust/: Cargo.toml
day14/rust/: Cargo.toml
day15/rust/: Cargo.toml
day16/rust/: Cargo.toml
day17/rust/: Cargo.toml
day17/rust/src/: main.rs
day18/rust/: Cargo.toml
day19/rust/: Cargo.toml
day20/rust/: Cargo.toml
day21/rust/: Cargo.toml
day22/rust/: Cargo.toml
day23/rust/: Cargo.toml
day24/rust/: Cargo.toml  computation_graph.dot  input_manually_fixed.txt
day25/rust/: Cargo.toml
inputs_encrypted/: input_01.csv.gpg  input_01.txt.gpg  input_02.csv.gpg  input_02.txt.gpg  input_03.txt.gpg  input_04.txt.gpg  input_05.txt.gpg  input_06.txt.gpg  input_07.txt.gpg  input_08.txt.gpg  input_09.txt.gpg  input_10.txt.gpg  input_11.txt.gpg  input_12.txt.gpg  input_13.txt.gpg  input_14.txt.gpg  input_15.txt.gpg  input_16.txt.gpg  input_17.txt.gpg  input_18.txt.gpg  input_19.txt.gpg  input_20.txt.gpg  input_21.txt.gpg  input_22.txt.gpg  input_23.txt.gpg  input_24.txt.gpg  input_25.txt.gpg
(+16 files in other folders)
