[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
itertools = "0.13.0"
tuple = "0.5.2"
cached = "0.46.1"
rayon = "1.10.0"
z3 = { version = "0.12", features = ["static-link-z3"] }
